@@ -53,7 +53,6 @@ namespace Mono.Cecil {
 		IList m_fieldStack;
 		IList m_genericParamStack;
 		IDictionary m_typeSpecCache;
-		IDictionary m_methodSpecCache;
 
 		uint m_methodIndex;
 		uint m_fieldIndex;
@@ -109,7 +108,6 @@ namespace Mono.Cecil {
 			m_fieldStack = new ArrayList ();
 			m_genericParamStack = new ArrayList ();
 			m_typeSpecCache = new Hashtable ();
-			m_methodSpecCache = new Hashtable ();
 
 			m_methodIndex = 1;
 			m_fieldIndex = 1;
@@ -173,16 +171,19 @@ namespace Mono.Cecil {
 		public MetadataToken GetMethodSpecToken (GenericInstanceMethod gim)
 		{
 			uint sig = m_sigWriter.AddMethodSpec (GetMethodSpecSig (gim));
-			if (m_methodSpecCache.Contains (sig))
-				return (m_methodSpecCache [sig] as MethodReference).MetadataToken;
-
 			MethodSpecTable msTable = m_tableWriter.GetMethodSpecTable ();
+
+			for (int i = 0; i < msTable.Rows.Count; i++) {
+				MethodSpecRow row = msTable [i];
+				if (row.Method == gim.ElementMethod.MetadataToken && row.Instantiation == sig)
+					return MetadataToken.FromMetadataRow (TokenType.MethodSpec, i);
+			}
+
 			MethodSpecRow msRow = m_rowWriter.CreateMethodSpecRow (
 				gim.ElementMethod.MetadataToken,
 				sig);
 			msTable.Rows.Add (msRow);
 			gim.MetadataToken = new MetadataToken (TokenType.MethodSpec, (uint) msTable.Rows.Count);
-			m_methodSpecCache [sig] = gim;
 			return gim.MetadataToken;
 		}
 
